[package]
name = "rust-string-and-text-study"
version = "0.1.0"
authors = ["raimon <raimon49@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "0.2.2"
lazy_static = "0.2.8"
unicode-normalization = "0.1.5"
